--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,11 @@
         <dependency>
             <groupId>pt.inevo.encontra</groupId>
             <artifactId>encontra-graph-core</artifactId>  <!-- TODO - Remove this dependency! -->
-            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
